--- a/work.html
+++ b/work.html
@@ -12,20 +12,20 @@
 		  		<div id="logo"><img src="assets/mydevicon.PNG"></div>
 		  		<nav id="menu-long" class="flexbox">
 			  		<ul class="navi desktop-navi">
-			    		<li><a href="index.php">Home</a></li>
-			    		<li><a href="about.php">About</a></li>
-			    		<li><a href="services.php">Services</a></li>
-			    		<li><a href="work.php">Work</a></li>
+			    		<li><a href="index.html">Home</a></li>
+			    		<li><a href="about.html">About</a></li>
+			    		<li><a href="services.html">Services</a></li>
+			    		<li><a href="work.html">Work</a></li>
 			    		<li><a href="#contactform">Contact</a></li>
 			  		</ul>
 			  		<a id="hamburger" href="#home" onclick="myFunction()"><img src="https://img.icons8.com/android/24/000000/menu.png"></a>
 				</nav>
 		</div>
 		<ul id="movingnav" class="navi mobile-navi">
-						<li><a href="index.php">Home</a></li>
-			    		<li><a href="about.php">About</a></li>
-			    		<li><a href="services.php">Services</a></li>
-			    		<li><a href="work.php">Work</a></li>
+						<li><a href="index.html">Home</a></li>
+			    		<li><a href="about.html">About</a></li>
+			    		<li><a href="services.html">Services</a></li>
+			    		<li><a href="work.html">Work</a></li>
 			    		<li><a href="#contactform">Contact</a></li>
 		</ul>
 	</header>
