--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			<hr class="grey-border">
 			<div class="service-offering-text"><p>Let’s take the anxiety out of building your website; feel empowered knowing there is a group of experts who have been on your exact same journey who can clarify, roadmap, and define what the next step is all while staying in your budget.</p></div>
 		</div>
-		<a href="services.php" class="hero-img-button">FULL SERVICES LIST</a>
+		<a href="services.html" class="hero-img-button">FULL SERVICES LIST</a>
 	</div>
 
 		<div id="" class="sub-header-1 flexbox nowrap">
@@ -142,7 +142,7 @@
 				<div class="service-offering-text margin-10"><p><strong>We are here to help you.</strong> We have a passion for people just as much as we love design and development. Our clients refer us to their friends and business partners because we advocate for our clients and invest 110% into their business. Because a good relationship doesn’t end when the website is finally hosted; we believe our services and support to you should carry on even after your successful launch.</p></div>
 			</div>
 		</div>
-		<a href="about.php" class="hero-img-button">LEARN MORE</a>
+		<a href="about.html" class="hero-img-button">LEARN MORE</a>
 	</div>
 
 	<div id="" class="view-work flexbox nowrap-col">
@@ -151,7 +151,7 @@
 		<p class="thankful-title-1 margin-20">We help new and old businesses <span class="colored-text">claim web authority</span> and <span class="colored-text">beat the competiton</span>.</p>
 		<p class="thankful-p">A successful website converts visiotrs into customers. It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. 
 		</p>
-		<a href="work.php" id="button-large-margin" class="hero-img-button">VIEW WORK</a> 
+		<a href="work.html" id="button-large-margin" class="hero-img-button">VIEW WORK</a> 
 	</div>
 	<div id="" class="sub-header-3 flexbox nowrap" style="display: none;">
 		<h2 id="hd2" class="sub-header-h2">What our clients say</h2>
