Updated services html

--- a/services.html
+++ b/services.html
@@ -13,7 +13,7 @@
 		  		<div id="logo"><img src="assets/mydevicon.PNG"></div>
 		  		<nav id="menu-long" class="flexbox">
 			  		<ul class="navi desktop-navi">
-			    	<li><a href="index.php">Home</a></li>
+			    	<li><a href="index.html">Home</a></li>
 			    		<li><a href="about.html">About</a></li>
 			    		<li><a href="services.html">Services</a></li>
 			    		<li><a href="work.html">Work</a></li>
